--- a/source/index.html
+++ b/source/index.html
@@ -1,166 +1,145 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Кэт энерджи
-      </title>
-  </head>
-  <body>
 
-    <header class="page-header">
-      <img class="page-header__img" src="http://placehold.it/150x100"
-      width="150" height="100" alt="cat-picture">
-      <a class="page-header__logo">
-        <img class="page-header__logo-img" src="http://placehold.it/150x100"
-        width="150" height="100" alt="cat-picture">
-      </a>
-      <nav class="main-nav">
-        <ul class="main-nav__list site-list">
-          <li class="site-list__item site-list__item--active"
-            <a href="index.html">Главная</a>
-          </li>
-          <li class="site-list__item"
-            <a href="catalog.html">Каталог продукции</a>
-          </li>
-          <li class="site-list__item"
-            <a href="form.html">Подбор программы</a>
-          </li>
-          <li class="site-list__item"
-            <a href="#">Контакты</a>
-          </li>
-          <li class="site-list__item"
-            <a href="#">HTML Academy</a>
-          </li>
-        </ul>
-        <ul class="main-nav__list user-list">
-          <li class="user-list__item">
-            <a class="user-list__login" href="login.html">Войти</a>
-          </li>
-        </ul>
-      </nav>
-    </header>
+<head>
+  <meta charset="utf-8">
+  <title>HTML Academy: Кэт энерджи
+  </title>
+</head>
 
-    <main class="page-main">
+<body>
+  <header class="page-header">
+    <a class="page-header__link">
+      <img class="page-header__link-img" src="http://placehold.it/150x100" width="150" height="100" alt="cat-picture">
+    </a>
+    <a class="page-header__logo">
+      <img class="page-header__logo-img" src="http://placehold.it/150x100" width="150" height="100" alt="cat-picture">
+    </a>
+    <nav class="main-nav">
+      <ul class="main-nav__list site-list">
+        <li class="site-list__item site-list__item--active">
+          <a href="index.html" class="site-list__link">Главная</a>
+        </li>
+        <li class="site-list__item">
+          <a href="catalog.html" class="site-list__link">Каталог продукции</a>
+        </li>
+        <li class="site-list__item">
+          <a href="form.html" class="site-list__link">Подбор программы</a>
+        </li>
+        <li class="site-list__item">
+          <a href="#" class="site-list__link">Контакты</a>
+        </li>
+        <li class="site-list__item">
+          <a href="#" class="site-list__link">HTML Academy</a>
+        </li>
+      </ul>
+      <ul class="main-nav__list user-list">
+        <li class="user-list__item">
+          <a class="user-list__login">Войти</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
 
-      <h1 class="visually-hidden">Cat-energy - отличный перекус для кота
-      </h1>
+  <main class="page-main">
 
-      <section class="choice">
-        <header class="choice__header">
-          <h2 class="visually-hidden">Выбор программы</h2>
-          <b class="choice__slogan">Функциональное питание для котов</b>
-          <p class="choice__intro">Занялся собой? Займись котом!</p>
-          <a href="#" class="choise__link">Подобрать программу</a>
-        </header>
-        <table class="choise__list-header">
-          <tr>
-            <td class="choice__list-pic">
-              <img src="http://placehold.it/150x100">
-            </td>
-            <td class="choice__list-title">
-              ПОХУДЕНИЕ
-            </td>
-          </tr>
-        </table>
-        <p class="choice__list-value">Ваш кот весит больше собаки и почти
-          утратил способность лазить по деревьям? пора на диету! Cat Energy Slim
-          поможет вашему питомцу сбросить лишний вес!</p>
-        <a class="choice__catalog" href="catalog.html"> КАТАЛОГ SLIM &#8594;</a>
-        <table class="choise__list-header">
-          <tr>
-            <td class="choice__list-pic">
-              <img src="http://placehold.it/150x100">
-            </td>
-            <td class="choice__list-title">
-              НАБОР МАССЫ
-            </td>
-          </tr>
-        </table>
-        <p class="choice__list-value">Заработать авторитет среди дворовых котов
-          и даже собак? Cat Energy Slim поможет вашему коту нарастить
-          необходимые мышцы!</p>
-        <a class="choice__catalog" href="catalog.html"> КАТАЛОГ PRO &#8594;</a>
-      </section>
+    <section class="choice">
+      <header class="choice__header">
+        <h1 class="choice__slogan">Функциональное питание для котов</h1>
+        <p class="choice__intro">Занялся собой? Займись котом!</p>
+        <a href="#" class="choise__link">Подобрать программу</a>
+      </header>
+      <ul class="choice__list">
+        <li class="choice__list-item">
+          <img src="http://placehold.it/150x100" class="choice__list-pic"
+            width="150" height="100" alt="Похудение">
+            <p class="choice__list-value">Ваш кот весит больше собаки и почти
+              утратил способность лазить по деревьям? пора на диету! Cat Energy Slim
+              поможет вашему питомцу сбросить лишний вес!</p>
+          <img src="http://placehold.it/150x100" class="choice__catalog"
+            width="150" height="100" alt="Каталог slim">
+        </li>
+        <li class="choice__list-item">
+          <img src="http://placehold.it/150x100" class="choice__list-pic"
+            width="150" height="100" alt="Набор массы">
+            <p class="choice__list-value">Заработать авторитет среди дворовых котов
+              и даже собак? Cat Energy Slim поможет вашему коту нарастить
+              необходимые мышцы!</p>
+          <img src="http://placehold.it/150x100" class="choice__catalog"
+            width="150" height="100" alt="Каталог pro">
+        </li>
+      </ul>
+    </section>
 
-      <section class="how-works">
-        <h3 class="visually-hidden">О том, как работает программа</h3>
-        <b class="how-works__title">Как это работает</b>
-        <ul class="how-works__list">
-          <li class="how-works__list-item how-works__benefit">
-            <p>Функциональное питание содержит только полезные питательные
-              вещества.</p>
-          </li>
-          <li class="how-works__list-item how-works__fast">
-            <img>
-            <p>Выпускается в виде порошка, который нужно лишь залить кипятком и
-              готово.</p>
-          </li>
-          <li class="how-works__list-item how-works__replace">
-            <img>
-            <p>Замените один-два приема обычной еды на наше функциональное
-              питание.</p>
-          </li>
-          <li class="how-works__list-item how-works__month">
-            <img>
-            <p>Уже через месяц наслаждайтесь изменениями к лучшему вашего
-              питомца.</p>
-          </li>
-        </ul>
-      </section>
+    <section class="how-works">
+      <h2 class="how-works__title">Как это работает</h2>
+      <ul class="how-works__list">
+        <li class="how-works__list-item how-works__benefit">
+          <p>Функциональное питание содержит только полезные питательные
+            вещества.</p>
+        </li>
+        <li class="how-works__list-item how-works__fast">
+          <p>Выпускается в виде порошка, который нужно лишь залить кипятком и
+            готово.</p>
+        </li>
+        <li class="how-works__list-item how-works__replace">
+          <p>Замените один-два приема обычной еды на наше функциональное
+            питание.</p>
+        </li>
+        <li class="how-works__list-item how-works__month">
+          <p>Уже через месяц наслаждайтесь изменениями к лучшему вашего
+            питомца.</p>
+        </li>
+      </ul>
+    </section>
 
-      <section class="example">
-        <h4 class="visually-hidden">Пример программы</h4>
-        <p class="example__title">Живой пример</p>
-        <p class="example__info">Борис сбросил 5кг за 2 месяца, просто заменив
-          свой обычный корм на Cat Energy Slim. Отличный результат бз изнуряющих
-          тренировок! При этом он не менял своих привычек и по-прежнему спит по
-          16 часов в день.</p>
+    <section class="example">
+      <h2 class="example__title">Живой пример</h2>
+      <p class="example__info">Борис сбросил 5кг за 2 месяца, просто заменив
+        свой обычный корм на Cat Energy Slim. Отличный результат бз изнуряющих
+        тренировок! При этом он не менял своих привычек и по-прежнему спит по
+        16 часов в день.</p>
+      <div class="example__borders">
         <p class="example__border">5 кг снижение веса</p>
         <p class="example__border">60 дней затрачено времени</p>
-        <p class="example__cost">ЗАТРАТЫ НА ПИТАНИЕ: 15 000 РУБ.</p>
-        <img class="example__cat" src="http://placehold.it/150x100">
-        <p class="example__text">Было</p>
-        <img class="example__scale" src="http://placehold.it/150x100">
-        <p class="example__text">Стало</p>
-      </section>
-
-      <section class="footer">
-        <table class="footer__table">
-          <tr>
-            <td class="footer__table-item">
-              <p class="footer__text">ПРИГЛАШАЕМ К СОТРУДНИЧЕСТВУ ДИЛЕРОВ!</p>
-            </td>
-            <td class="footer__table-item">
-              <p class="footer__address">ПРИГЛАШАЕМ К СОТРУДНИЧЕСТВУ ДИЛЕРОВ!</p>
-            </td>
-          </tr>
-        </table>
-        <img class="footer__map" src="http://placehold.it/150x100">
-      </section>
-    </main>
-
-    <footer class="page-footer">
-      <h5 class="visually-hidden">Заключительный блок сайта, контакты</h5>
-      <p class="page-footer__logo"><b>CAT</b> ENERGY</p>
-      <div class="page-footer__wrapper social-media">
-        <a class="page-footer__vk">
-          <img class="page-header__vk-img" src="http://placehold.it/150x100"
-          width="150" height="100" alt="cat-picture">
-        </a>
-        <a class="page-footer__instagram">
-          <img class="page-header__instagram-img" src="http://placehold.it/150x100"
-          width="150" height="100" alt="cat-picture">
-        </a>
-        <a class="page-footer__vk">
-          <img class="page-header__facebook-img" src="http://placehold.it/150x100"
-          width="150" height="100" alt="cat-picture">
-        </a>
       </div>
-      <div class="page-footer__copyright copyright">
+      <p class="example__cost">ЗАТРАТЫ НА ПИТАНИЕ: 15 000 РУБ.</p>
+      <img class="example__cat" src="http://placehold.it/150x100" width="150" height="100"
+        alt="Изображение упитанного кота">
+      <div class="example__wrapper">
+        <p class="example__text">Было</p>
+        <img class="example__scale" src="http://placehold.it/150x100" width="150" height="100" alt="Scale">
+        <p class="example__text">Стало</p>
+      </div>
+    </section>
+  </main>
+
+  <footer class="page-footer">
+    <div class="page-footer__address-wrapper">
+      <p class="page-footer__text">ПРИГЛАШАЕМ К СОТРУДНИЧЕСТВУ ДИЛЕРОВ!</p>
+      <p class="page-footer__address">ПРИГЛАШАЕМ К СОТРУДНИЧЕСТВУ ДИЛЕРОВ!</p>
+    </div>
+    <img class="footer__map" src="http://placehold.it/150x100" width="150" height="100" alt="Карта">
+    <img class="page-footer__logo" src="http://placehold.it/150x100"
+      width="150" height="100" alt="Cat energy">
+    <div class="page-footer__wrapper social-media">
+      <a class="page-footer__vk social-media__item">
+        <span class="visually-hidden">Вконтакте</span>
+      </a>
+      <a class="page-footer__instagram social-media__item">
+        <span class="visually-hidden">Instagram</span>
+      </a>
+      <a class="page-footer__vk social-media__item">
+        <span class="visually-hidden">Facebook</span>
+      </a>
+    </div>
+    <div class="page-footer__copyright copyright">
       <p class="page-footer__copyright-name">HTML Academy></p>
       <a class="page-footer__copyright-link" href="https://htmlacademy.ru/intensive/adaptive">
-      <img class="page-footer__copyright-img" src="http://placehold.it/150x100"></a>
-    </footer>
+        <img class="page-footer__copyright-img" src="http://placehold.it/150x100"
+          width="150" height="100" alt="Copyright"></a>
+     </div>
+  </footer>
 
-  </body>
+</body>
 </html>
