--- a/source/index.html
+++ b/source/index.html
@@ -9,10 +9,10 @@
 
 <body>
   <header class="page-header">
-    <a class="page-header__link">
+    <a href="#" class="page-header__link">
       <img class="page-header__link-img" src="http://placehold.it/150x100" width="150" height="100" alt="cat-picture">
     </a>
-    <a class="page-header__logo">
+    <a href="#" class="page-header__logo">
       <img class="page-header__logo-img" src="http://placehold.it/150x100" width="150" height="100" alt="cat-picture">
     </a>
     <nav class="main-nav">
@@ -35,7 +35,7 @@
       </ul>
       <ul class="main-nav__list user-list">
         <li class="user-list__item">
-          <a class="user-list__login">Войти</a>
+          <a href="#" class="user-list__login">Войти</a>
         </li>
       </ul>
     </nav>
