--- a/source/catalog.html
+++ b/source/catalog.html
@@ -10,10 +10,10 @@
 <body>
 
   <header class="page-header">
-    <a class="page-header__link">
+    <a href="index.html" class="page-header__link">
       <img class="page-header__link-img" src="http://placehold.it/150x100" width="150" height="100" alt="cat-picture">
     </a>
-    <a class="page-header__logo">
+    <a href="index.html" class="page-header__logo">
       <img class="page-header__logo-img" src="http://placehold.it/150x100" width="150" height="100" alt="cat-picture">
     </a>
     <nav class="main-nav">
@@ -31,12 +31,12 @@
           <a href="#" class="site-list__link">Контакты</a>
         </li>
         <li class="site-list__item">
-          <a href="#" class="site-list__link">HTML Academy</a>
+          <a href="https://htmlacademy.ru/intensive/adaptive" class="site-list__link">HTML Academy</a>
         </li>
       </ul>
       <ul class="main-nav__list user-list">
         <li class="user-list__item">
-          <a class="user-list__login">Войти</a>
+          <a href="#" class="user-list__login">Войти</a>
         </li>
       </ul>
     </nav>
@@ -372,23 +372,25 @@
       <p class="page-footer__address">ПРИГЛАШАЕМ К СОТРУДНИЧЕСТВУ ДИЛЕРОВ!</p>
     </div>
     <img class="footer__map" src="http://placehold.it/150x100" width="150" height="100" alt="Карта">
-    <img class="page-footer__logo" src="http://placehold.it/150x100" width="150" height="100" alt="Cat energy">
+    <img class="page-footer__logo" src="http://placehold.it/150x100"
+      width="150" height="100" alt="Cat energy">
     <div class="page-footer__wrapper social-media">
-      <a class="page-footer__vk social-media__item">
+      <a href="https://vk.com" class="page-footer__vk social-media__item">
         <span class="visually-hidden">Вконтакте</span>
       </a>
-      <a class="page-footer__instagram social-media__item">
+      <a href="https://www.instagram.com" class="page-footer__instagram social-media__item">
         <span class="visually-hidden">Instagram</span>
       </a>
-      <a class="page-footer__vk social-media__item">
+      <a href="https://www.facebook.com" class="page-footer__vk social-media__item">
         <span class="visually-hidden">Facebook</span>
       </a>
     </div>
     <div class="page-footer__copyright copyright">
       <p class="page-footer__copyright-name">HTML Academy></p>
       <a class="page-footer__copyright-link" href="https://htmlacademy.ru/intensive/adaptive">
-        <img class="page-footer__copyright-img" src="http://placehold.it/150x100" width="150" height="100" alt="Copyright"></a>
-    </div>
+        <img class="page-footer__copyright-img" src="http://placehold.it/150x100"
+          width="150" height="100" alt="Copyright"></a>
+     </div>
   </footer>
 
 </body>
