--- a/source/index.html
+++ b/source/index.html
@@ -9,10 +9,10 @@
 
 <body>
   <header class="page-header">
-    <a href="#" class="page-header__link">
+    <a href="index.html" class="page-header__link">
       <img class="page-header__link-img" src="http://placehold.it/150x100" width="150" height="100" alt="cat-picture">
     </a>
-    <a href="#" class="page-header__logo">
+    <a href="index.html" class="page-header__logo">
       <img class="page-header__logo-img" src="http://placehold.it/150x100" width="150" height="100" alt="cat-picture">
     </a>
     <nav class="main-nav">
@@ -30,7 +30,7 @@
           <a href="#" class="site-list__link">Контакты</a>
         </li>
         <li class="site-list__item">
-          <a href="#" class="site-list__link">HTML Academy</a>
+          <a href="https://htmlacademy.ru/intensive/adaptive" class="site-list__link">HTML Academy</a>
         </li>
       </ul>
       <ul class="main-nav__list user-list">
@@ -123,13 +123,13 @@
     <img class="page-footer__logo" src="http://placehold.it/150x100"
       width="150" height="100" alt="Cat energy">
     <div class="page-footer__wrapper social-media">
-      <a class="page-footer__vk social-media__item">
+      <a href="https://vk.com" class="page-footer__vk social-media__item">
         <span class="visually-hidden">Вконтакте</span>
       </a>
-      <a class="page-footer__instagram social-media__item">
+      <a href="https://www.instagram.com" class="page-footer__instagram social-media__item">
         <span class="visually-hidden">Instagram</span>
       </a>
-      <a class="page-footer__vk social-media__item">
+      <a href="https://www.facebook.com" class="page-footer__vk social-media__item">
         <span class="visually-hidden">Facebook</span>
       </a>
     </div>
