--- a/source/catalog.html
+++ b/source/catalog.html
@@ -10,16 +10,16 @@
 <body>
 
   <header class="page-header">
-    <a href="index.html" class="page-header__link">
+    <a href="" class="page-header__link">
       <img class="page-header__link-img" src="http://placehold.it/150x100" width="150" height="100" alt="cat-picture">
     </a>
-    <a href="index.html" class="page-header__logo">
+    <a href="" class="page-header__logo">
       <img class="page-header__logo-img" src="http://placehold.it/150x100" width="150" height="100" alt="cat-picture">
     </a>
     <nav class="main-nav">
       <ul class="main-nav__list site-list">
         <li class="site-list__item site-list__item--active">
-          <a href="index.html" class="site-list__link">Главная</a>
+          <a href="" class="site-list__link">Главная</a>
         </li>
         <li class="site-list__item">
           <a href="catalog.html" class="site-list__link">Каталог продукции</a>
@@ -375,13 +375,13 @@
     <img class="page-footer__logo" src="http://placehold.it/150x100"
       width="150" height="100" alt="Cat energy">
     <div class="page-footer__wrapper social-media">
-      <a href="https://vk.com" class="page-footer__vk social-media__item">
+      <a href="#" class="page-footer__vk social-media__item">
         <span class="visually-hidden">Вконтакте</span>
       </a>
-      <a href="https://www.instagram.com" class="page-footer__instagram social-media__item">
+      <a href="#" class="page-footer__instagram social-media__item">
         <span class="visually-hidden">Instagram</span>
       </a>
-      <a href="https://www.facebook.com" class="page-footer__vk social-media__item">
+      <a href="#" class="page-footer__vk social-media__item">
         <span class="visually-hidden">Facebook</span>
       </a>
     </div>
