Исправляет в каталоге href

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -19,10 +19,10 @@
     <nav class="main-nav">
       <ul class="main-nav__list site-list">
         <li class="site-list__item site-list__item--active">
-          <a href="" class="site-list__link">Главная</a>
+          <a href="index.html" class="site-list__link">Главная</a>
         </li>
         <li class="site-list__item">
-          <a href="catalog.html" class="site-list__link">Каталог продукции</a>
+          <a href="" class="site-list__link">Каталог продукции</a>
         </li>
         <li class="site-list__item">
           <a href="form.html" class="site-list__link">Подбор программы</a>
