--- a/source/catalog.html
+++ b/source/catalog.html
@@ -10,10 +10,10 @@
 <body>
 
   <header class="page-header">
-    <a href="" class="page-header__link">
+    <a href="index.html" class="page-header__link">
       <img class="page-header__link-img" src="http://placehold.it/150x100" width="150" height="100" alt="cat-picture">
     </a>
-    <a href="" class="page-header__logo">
+    <a href="index.html" class="page-header__logo">
       <img class="page-header__logo-img" src="http://placehold.it/150x100" width="150" height="100" alt="cat-picture">
     </a>
     <nav class="main-nav">
