--- a/source/catalog.html
+++ b/source/catalog.html
@@ -372,8 +372,10 @@
       <p class="page-footer__address">ПРИГЛАШАЕМ К СОТРУДНИЧЕСТВУ ДИЛЕРОВ!</p>
     </div>
     <img class="footer__map" src="http://placehold.it/150x100" width="150" height="100" alt="Карта">
-    <img class="page-footer__logo" src="http://placehold.it/150x100"
+    <a href="index.html" class="page-footer__logo">
+      <img class="page-footer__logo-img" src="http://placehold.it/150x100"
       width="150" height="100" alt="Cat energy">
+    </a>
     <div class="page-footer__wrapper social-media">
       <a href="#" class="page-footer__vk social-media__item">
         <span class="visually-hidden">Вконтакте</span>
