--- a/source/catalog.html
+++ b/source/catalog.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <link href="css/style.css" rel="stylesheet">
   <title>HTML Academy: Кэт энерджи
   </title>
 </head>
@@ -10,11 +11,11 @@
 <body>
 
   <header class="page-header">
-    <a href="index.html" class="page-header__link">
-      <img class="page-header__link-img" src="http://placehold.it/150x100" width="150" height="100" alt="cat-picture">
+    <a href="" class="page-header__logo">
+      <img class="page-header__logo-img" src="img/logo-mobile.svg" width="550" height="200" alt="cat-picture">
     </a>
-    <a href="index.html" class="page-header__logo">
-      <img class="page-header__logo-img" src="http://placehold.it/150x100" width="150" height="100" alt="cat-picture">
+    <a href="" class="page-header__menu">
+      <img class="page-header__menu-img" src="img/icon-mobile-menu.svg" width="50" height="50" alt="menu-mobile">
     </a>
     <nav class="main-nav">
       <ul class="main-nav__list site-list">
@@ -48,7 +49,7 @@
       <ul class="catalog__list">
         <li class="catalog__list-item">
           <div class="catalog__wrapper">
-            <img class="catalog__img" src="http://placehold.it/150x100" width="150" height="100" alt="catalog">
+            <img class="catalog__img" src="img/chicken-small-mobile@1x.jpg" width="150" height="100" alt="catalog">
             <div class="catalog__table-wrapper">
               <h2 class="catalog__table-header">CAT ENERGY <br> PRO 500 Г</h2>
               <table class="catalog__table">
@@ -83,7 +84,7 @@
         </li>
         <li class="catalog__list-item">
           <div class="catalog__wrapper">
-            <img class="catalog__img" src="http://placehold.it/150x100" width="150" height="100" alt="catalog">
+            <img class="catalog__img" src="img/chicken-big-mobile@1x.jpg" width="150" height="100" alt="catalog">
             <div class="catalog__table-wrapper">
               <h2 class="catalog__table-header">CAT ENERGY <br> PRO 1000 Г</h2>
               <table class="catalog__table">
@@ -118,7 +119,7 @@
         </li>
         <li class="catalog__list-item">
           <div class="catalog__wrapper">
-            <img class="catalog__img" src="http://placehold.it/150x100" width="150" height="100" alt="catalog">
+            <img class="catalog__img" src="img/fish-small-mobile@1x.jpg" width="150" height="100" alt="catalog">
             <div class="catalog__table-wrapper">
               <h2 class="catalog__table-header">CAT ENERGY <br> PRO 500 Г</h2>
               <table class="catalog__table">
@@ -153,7 +154,7 @@
         </li>
         <li class="catalog__list-item">
           <div class="catalog__wrapper">
-            <img class="catalog__img" src="http://placehold.it/150x100" width="150" height="100" alt="catalog">
+            <img class="catalog__img" src="img/fish-big-mobile@1x.jpg" width="150" height="100" alt="catalog">
             <div class="catalog__table-wrapper">
               <h2 class="catalog__table-header">CAT ENERGY <br> PRO 1000 Г</h2>
               <table class="catalog__table">
@@ -188,7 +189,7 @@
         </li>
         <li class="catalog__list-item">
           <div class="catalog__wrapper">
-            <img class="catalog__img" src="http://placehold.it/150x100" width="150" height="100" alt="catalog">
+            <img class="catalog__img" src="img/buckwheat-small-mobile@1x.jpg" width="150" height="100" alt="catalog">
             <div class="catalog__table-wrapper">
               <h2 class="catalog__table-header">CAT ENERGY <br> SLIM 500 Г</h2>
               <table class="catalog__table">
@@ -223,7 +224,7 @@
         </li>
         <li class="catalog__list-item">
           <div class="catalog__wrapper">
-            <img class="catalog__img" src="http://placehold.it/150x100" width="150" height="100" alt="catalog">
+            <img class="catalog__img" src="img/buckwheat-big-mobile@1x.jpg" width="150" height="100" alt="catalog">
             <div class="catalog__table-wrapper">
               <h2 class="catalog__table-header">CAT ENERGY <br> SLIM 1000 Г</h2>
               <table class="catalog__table">
@@ -258,7 +259,7 @@
         </li>
         <li class="catalog__list-item">
           <div class="catalog__wrapper">
-            <img class="catalog__img" src="http://placehold.it/150x100" width="150" height="100" alt="catalog">
+            <img class="catalog__img" src="img/rice-small-mobile@1x.jpg" width="150" height="100" alt="catalog">
             <div class="catalog__table-wrapper">
               <h2 class="catalog__table-header">CAT ENERGY <br> SLIM 500 Г</h2>
               <table class="catalog__table">
@@ -360,7 +361,7 @@
           <button class="extra__order" type="button">ЗАКАЗАТЬ</button>
         </li>
         <li class="extra__list-item">
-          <img class="extra__img" src="http://placehold.it/150x100" width="150" height="100" alt="add extra">
+          <img class="extra__img" src="img/gift-photo-mobile@1x.jpg" width="150" height="100" alt="add extra">
         </li>
       </ul>
     </section>
@@ -371,26 +372,28 @@
       <p class="page-footer__text">ПРИГЛАШАЕМ К СОТРУДНИЧЕСТВУ ДИЛЕРОВ!</p>
       <p class="page-footer__address">ПРИГЛАШАЕМ К СОТРУДНИЧЕСТВУ ДИЛЕРОВ!</p>
     </div>
-    <img class="footer__map" src="http://placehold.it/150x100" width="150" height="100" alt="Карта">
-    <a href="index.html" class="page-footer__logo">
-      <img class="page-footer__logo-img" src="http://placehold.it/150x100"
-      width="150" height="100" alt="Cat energy">
+    <img class="footer__map" src="img/bg-map-mobile@1x.png" width="150" height="100" alt="Карта">
+    <a href="" class="page-footer__logo">
+      <img class="page-footer__logo-img" src="img/logo-footer.svg" width="550" height="200" alt="Cat energy">
     </a>
     <div class="page-footer__wrapper social-media">
       <a href="#" class="page-footer__vk social-media__item">
-        <span class="visually-hidden">Вконтакте</span>
+        <img class="visually-hidden" src="img/icon-vk.svg"
+          width="150" height="100" alt="Вконтакте" >
       </a>
       <a href="#" class="page-footer__instagram social-media__item">
-        <span class="visually-hidden">Instagram</span>
+        <img class="visually-hidden" src="img/icon-insta.svg"
+          width="150" height="100" alt="Instagram">
       </a>
       <a href="#" class="page-footer__vk social-media__item">
-        <span class="visually-hidden">Facebook</span>
+        <img class="visually-hidden" src="img/icon-fb.svg"
+          width="150" height="100" alt="Facebook">
       </a>
     </div>
     <div class="page-footer__copyright copyright">
-      <p class="page-footer__copyright-name">HTML Academy></p>
+      <span class="page-footer__copyright-name">HTML Academy</span>
       <a class="page-footer__copyright-link" href="https://htmlacademy.ru/intensive/adaptive">
-        <img class="page-footer__copyright-img" src="http://placehold.it/150x100"
+        <img class="page-footer__copyright-img" src="img/htmlacademy.svg"
           width="150" height="100" alt="Copyright"></a>
     </div>
   </footer>
