--- a/source/form.html
+++ b/source/form.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <link href="css/style.css" rel="stylesheet">
   <title>HTML Academy: Кэт энерджи
   </title>
 </head>
@@ -10,11 +11,11 @@
 <body>
 
   <header class="page-header">
-    <a href="index.html" class="page-header__link">
-      <img class="page-header__link-img" src="http://placehold.it/150x100" width="150" height="100" alt="cat-picture">
+    <a href="" class="page-header__logo">
+      <img class="page-header__logo-img" src="img/logo-mobile.svg" width="550" height="200" alt="cat-picture">
     </a>
-    <a href="index.html" class="page-header__logo">
-      <img class="page-header__logo-img" src="http://placehold.it/150x100" width="150" height="100" alt="cat-picture">
+    <a href="" class="page-header__menu">
+      <img class="page-header__menu-img" src="img/icon-mobile-menu.svg" width="50" height="50" alt="menu-mobile">
     </a>
     <nav class="main-nav">
       <ul class="main-nav__list site-list">
