--- a/source/index.html
+++ b/source/index.html
@@ -3,17 +3,18 @@
 
 <head>
   <meta charset="utf-8">
+  <link href="css/style.css" rel="stylesheet">
   <title>HTML Academy: Кэт энерджи
   </title>
 </head>
 
 <body>
   <header class="page-header">
-    <a href="" class="page-header__link">
-      <img class="page-header__link-img" src="http://placehold.it/150x100" width="150" height="100" alt="cat-picture">
-    </a>
     <a href="" class="page-header__logo">
-      <img class="page-header__logo-img" src="http://placehold.it/150x100" width="150" height="100" alt="cat-picture">
+      <img class="page-header__logo-img" src="img/logo-mobile.svg" width="550" height="200" alt="cat-picture">
+    </a>
+    <a href="" class="page-header__menu">
+      <img class="page-header__menu-img" src="img/icon-mobile-menu.svg" width="50" height="50" alt="menu-mobile">
     </a>
     <nav class="main-nav">
       <ul class="main-nav__list site-list">
@@ -45,28 +46,34 @@
 
     <section class="choice">
       <header class="choice__header">
-        <h1 class="choice__slogan">Функциональное питание для котов</h1>
-        <p class="choice__intro">Занялся собой? Займись котом!</p>
+        <div class="choice__background">
+          <h1 class="choice__slogan">Функциональное питание для котов</h1>
+          <p class="choice__intro">Занялся собой? Займись котом!</p>
+        </div>
+        <img src="img/index-can-mobile@1x.png" class="choice__can-pic"
+          alt="<Баночка">
         <a href="#" class="choise__link">Подобрать программу</a>
       </header>
       <ul class="choice__list">
         <li class="choice__list-item">
-          <img src="http://placehold.it/150x100" class="choice__list-pic"
+          <img src="img/icon-cat-slim.svg" class="choice__list-pic"
             width="150" height="100" alt="Похудение">
             <p class="choice__list-value">Ваш кот весит больше собаки и почти
               утратил способность лазить по деревьям? пора на диету! Cat Energy Slim
               поможет вашему питомцу сбросить лишний вес!</p>
-          <img src="http://placehold.it/150x100" class="choice__catalog"
-            width="150" height="100" alt="Каталог slim">
+          <span class="choice_catalog">КАТАЛОГ SLIM</span>
+          <img src="img/icon-right-arrow-verylong.svg" class="choice__catalog-img"
+            width="15" height="10" alt="Каталог slim">
         </li>
         <li class="choice__list-item">
-          <img src="http://placehold.it/150x100" class="choice__list-pic"
+          <img src="img/icon-cat-pro.svg" class="choice__list-pic"
             width="150" height="100" alt="Набор массы">
             <p class="choice__list-value">Заработать авторитет среди дворовых котов
               и даже собак? Cat Energy Slim поможет вашему коту нарастить
               необходимые мышцы!</p>
-          <img src="http://placehold.it/150x100" class="choice__catalog"
-            width="150" height="100" alt="Каталог pro">
+            <span class="choice_catalog">КАТАЛОГ PRO</span>
+            <img src="img/icon-right-arrow-verylong.svg" class="choice__catalog-img"
+              width="15" height="10" alt="Каталог pro">
         </li>
       </ul>
     </section>
@@ -104,11 +111,11 @@
         <p class="example__border">60 дней затрачено времени</p>
       </div>
       <p class="example__cost">ЗАТРАТЫ НА ПИТАНИЕ: 15 000 РУБ.</p>
-      <img class="example__cat" src="http://placehold.it/150x100" width="150" height="100"
+      <img class="example__cat" src="img/before-mobile@1x.png" width="150" height="100"
         alt="Изображение упитанного кота">
       <div class="example__wrapper">
         <p class="example__text">Было</p>
-        <img class="example__scale" src="http://placehold.it/150x100" width="150" height="100" alt="Scale">
+        <img class="example__scale" src="img/" width="150" height="100" alt="Scale">
         <p class="example__text">Стало</p>
       </div>
     </section>
@@ -119,26 +126,28 @@
       <p class="page-footer__text">ПРИГЛАШАЕМ К СОТРУДНИЧЕСТВУ ДИЛЕРОВ!</p>
       <p class="page-footer__address">ПРИГЛАШАЕМ К СОТРУДНИЧЕСТВУ ДИЛЕРОВ!</p>
     </div>
-    <img class="footer__map" src="http://placehold.it/150x100" width="150" height="100" alt="Карта">
+    <img class="footer__map" src="img/bg-map-mobile@1x.png" width="150" height="100" alt="Карта">
     <a href="" class="page-footer__logo">
-      <img class="page-footer__logo-img" src="http://placehold.it/150x100"
-      width="150" height="100" alt="Cat energy">
+      <img class="page-footer__logo-img" src="img/logo-footer.svg" width="550" height="200" alt="Cat energy">
     </a>
     <div class="page-footer__wrapper social-media">
       <a href="#" class="page-footer__vk social-media__item">
-        <span class="visually-hidden">Вконтакте</span>
+        <img class="visually-hidden" src="img/icon-vk.svg"
+          width="150" height="100" alt="Вконтакте" >
       </a>
       <a href="#" class="page-footer__instagram social-media__item">
-        <span class="visually-hidden">Instagram</span>
+        <img class="visually-hidden" src="img/icon-insta.svg"
+          width="150" height="100" alt="Instagram">
       </a>
       <a href="#" class="page-footer__vk social-media__item">
-        <span class="visually-hidden">Facebook</span>
+        <img class="visually-hidden" src="img/icon-fb.svg"
+          width="150" height="100" alt="Facebook">
       </a>
     </div>
     <div class="page-footer__copyright copyright">
-      <p class="page-footer__copyright-name">HTML Academy></p>
+      <span class="page-footer__copyright-name">HTML Academy</span>
       <a class="page-footer__copyright-link" href="https://htmlacademy.ru/intensive/adaptive">
-        <img class="page-footer__copyright-img" src="http://placehold.it/150x100"
+        <img class="page-footer__copyright-img" src="img/htmlacademy.svg"
           width="150" height="100" alt="Copyright"></a>
     </div>
   </footer>
