--- a/source/catalog.html
+++ b/source/catalog.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <link href="css/style.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet">
   <title>HTML Academy: Кэт энерджи
   </title>
 </head>
