--- a/source/index.html
+++ b/source/index.html
@@ -4,154 +4,165 @@
 <head>
   <meta charset="utf-8">
   <link href="css/style.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet">
   <title>HTML Academy: Кэт энерджи
   </title>
 </head>
 
 <body>
   <div class="page-container">
-  <header class="page-header">
-    <a href="" class="page-header__logo">
-      <img class="page-header__logo-img" src="img/logo-mobile.svg" width="550" height="200" alt="cat-picture">
-    </a>
-    <a href="" class="page-header__menu">
-      <img class="page-header__menu-img" src="img/icon-mobile-menu.svg" width="50" height="50" alt="menu-mobile">
-    </a>
-    <nav class="main-nav">
-      <ul class="main-nav__list site-list">
-        <li class="site-list__item site-list__item--active">
-          <a href="" class="site-list__link">Главная</a>
-        </li>
-        <li class="site-list__item">
-          <a href="catalog.html" class="site-list__link">Каталог продукции</a>
-        </li>
-        <li class="site-list__item">
-          <a href="form.html" class="site-list__link">Подбор программы</a>
-        </li>
-        <li class="site-list__item">
-          <a href="#" class="site-list__link">Контакты</a>
-        </li>
-        <li class="site-list__item">
-          <a href="https://htmlacademy.ru/intensive/adaptive" class="site-list__link">HTML Academy</a>
-        </li>
-      </ul>
-      <ul class="main-nav__list user-list">
-        <li class="user-list__item">
-          <a href="#" class="user-list__login">Войти</a>
-        </li>
-      </ul>
-    </nav>
-  </header>
+    <header class="page-header">
+      <div class="header-wrapper">
+        <a href="" class="page-header__logo">
+          <img class="page-header__logo-cat" src="img/logo-mobile.png" alt="cat-picture">
+        </a>
+        <a href="" class="page-header__logo">
+          <img class="page-header__logo-img" src="img/logo-mobile-header.png" alt="cat-logo">
+        </a>
+        <a href="" class="page-header__menu">
+          <img class="page-header__menu-img" src="img/icon-mobile-menu.svg" alt="menu-mobile">
+        </a>
+      </div>
+      <nav class="main-nav">
+        <ul class="main-nav__list site-list">
+          <li class="site-list__item site-list__item--active">
+            <a href="" class="site-list__link">Главная</a>
+          </li>
+          <li class="site-list__item">
+            <a href="catalog.html" class="site-list__link">Каталог продукции</a>
+          </li>
+          <li class="site-list__item">
+            <a href="form.html" class="site-list__link">Подбор программы</a>
+          </li>
+          <li class="site-list__item">
+            <a href="#" class="site-list__link">Контакты</a>
+          </li>
+          <li class="site-list__item">
+            <a href="https://htmlacademy.ru/intensive/adaptive" class="site-list__link">HTML Academy</a>
+          </li>
+        </ul>
+        <ul class="main-nav__list user-list">
+          <li class="user-list__item">
+            <a href="#" class="user-list__login">Войти</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
 
-  <main class="page-main">
+    <main class="page-main">
 
-    <section class="choice">
-      <header class="choice__header">
-        <div class="choice__background">
-          <h1 class="choice__slogan">Функциональное питание для котов</h1>
-          <p class="choice__intro">Занялся собой? Займись котом!</p>
-        </div>
-        <img src="img/index-can-mobile@1x.png" class="choice__can-pic"
-          alt="<Баночка">
-        <a href="#" class="choise__link">Подобрать программу</a>
-      </header>
-      <ul class="choice__list">
-        <li class="choice__list-item">
-          <img src="img/icon-cat-slim.svg" class="choice__list-pic"
-            width="150" height="100" alt="Похудение">
+      <section class="choice">
+        <header class="choice__header">
+          <div class="choice__background">
+            <h1 class="choice__slogan">Функциональное питание для котов</h1>
+            <p class="choice__intro">Занялся собой? Займись котом!</p>
+          </div>
+          <img src="img/index-can-mobile@1x.png" class="choice__can-pic" alt="<Баночка">
+          <a href="#" class="choise__link">Подобрать программу</a>
+        </header>
+        <ul class="choice__list">
+          <li class="choice__list-item">
+            <div class="choice__list-wrapper">
+            <img src="img/icon-cat-slim.svg" class="choice__list-pic1" alt="Похудение">
+            <p class="choice__list-title1">Похудение</p>
+            </div>
             <p class="choice__list-value">Ваш кот весит больше собаки и почти
               утратил способность лазить по деревьям? пора на диету! Cat Energy Slim
               поможет вашему питомцу сбросить лишний вес!</p>
-          <span class="choice_catalog">КАТАЛОГ SLIM</span>
-          <img src="img/icon-right-arrow-verylong.svg" class="choice__catalog-img"
-            width="15" height="10" alt="Каталог slim">
-        </li>
-        <li class="choice__list-item">
-          <img src="img/icon-cat-pro.svg" class="choice__list-pic"
-            width="150" height="100" alt="Набор массы">
+            <hr>
+            <span class="choice_catalog">КАТАЛОГ SLIM</span>
+            <img src="img/icon-right-arrow-long.svg" class="choice__catalog-img" alt="Каталог slim">
+          </li>
+          <li class="choice__list-item">
+            <div class="choice__list-wrapper">
+            <img src="img/icon-cat-pro.svg" class="choice__list-pic2" alt="Набор массы">
+            <p class="choice__list-title2">Набор массы</p>
+            </div>
             <p class="choice__list-value">Заработать авторитет среди дворовых котов
               и даже собак? Cat Energy Slim поможет вашему коту нарастить
               необходимые мышцы!</p>
+            <hr>
             <span class="choice_catalog">КАТАЛОГ PRO</span>
-            <img src="img/icon-right-arrow-verylong.svg" class="choice__catalog-img"
-              width="15" height="10" alt="Каталог pro">
-        </li>
-      </ul>
-    </section>
+            <img src="img/icon-right-arrow-long.svg" class="choice__catalog-img" width="15" height="10" alt="Каталог pro">
+          </li>
+        </ul>
+      </section>
 
-    <section class="how-works">
-      <h2 class="how-works__title">Как это работает</h2>
-      <ul class="how-works__list">
-        <li class="how-works__list-item how-works__benefit">
-          <p>Функциональное питание содержит только полезные питательные
-            вещества.</p>
-        </li>
-        <li class="how-works__list-item how-works__fast">
-          <p>Выпускается в виде порошка, который нужно лишь залить кипятком и
-            готово.</p>
-        </li>
-        <li class="how-works__list-item how-works__replace">
-          <p>Замените один-два приема обычной еды на наше функциональное
-            питание.</p>
-        </li>
-        <li class="how-works__list-item how-works__month">
-          <p>Уже через месяц наслаждайтесь изменениями к лучшему вашего
-            питомца.</p>
-        </li>
-      </ul>
-    </section>
+      <section class="how-works">
+        <h2 class="how-works__title">Как это работает</h2>
+        <ul class="how-works__list">
+          <li class="how-works__list-item how-works__benefit">
+            <img class="how-works_img">
+            <p class="how-works_article">Функциональное питание содержит только полезные питательные
+              вещества.</p>
+          </li>
+          <li class="how-works__list-item how-works__fast">
+            <img class="how-works_img">
+            <p class="how-works_article">Выпускается в виде порошка, который нужно лишь залить кипятком и
+              готово.</p>
+          </li>
+          <li class="how-works__list-item how-works__replace">
+            <img class="how-works_img">
+            <p class="how-works_article">Замените один-два приема обычной еды на наше функциональное
+              питание.</p>
+          </li>
+          <li class="how-works__list-item how-works__month">
+            <img class="how-works_img">
+            <p class="how-works_article">Уже через месяц наслаждайтесь изменениями к лучшему вашего
+              питомца.</p>
+          </li>
+        </ul>
+      </section>
 
-    <section class="example">
-      <h2 class="example__title">Живой пример</h2>
-      <p class="example__info">Борис сбросил 5кг за 2 месяца, просто заменив
-        свой обычный корм на Cat Energy Slim. Отличный результат бз изнуряющих
-        тренировок! При этом он не менял своих привычек и по-прежнему спит по
-        16 часов в день.</p>
-      <div class="example__borders">
-        <p class="example__border">5 кг снижение веса</p>
-        <p class="example__border">60 дней затрачено времени</p>
+      <section class="example">
+        <h2 class="example__title">Живой пример</h2>
+        <p class="example__info">Борис сбросил 5кг за 2 месяца, просто заменив
+          свой обычный корм на Cat Energy Slim. Отличный результат бз изнуряющих
+          тренировок! При этом он не менял своих привычек и по-прежнему спит по
+          16 часов в день.</p>
+        <div class="example__borders">
+          <p class="example__border">5 кг снижение веса</p>
+          <p class="example__border">60 дней затрачено времени</p>
+        </div>
+        <p class="example__cost">ЗАТРАТЫ НА ПИТАНИЕ: 15 000 РУБ.</p>
+        <img class="example__cat" src="img/before-mobile@1x.png" alt="Изображение упитанного кота">
+        <div class="example__wrapper">
+          <p class="example__text1">Было</p>
+          <img class="example__scale" src="img/" alt="Scale">
+          <p class="example__text2">Стало</p>
+        </div>
+      </section>
+    </main>
+
+    <footer class="page-footer">
+      <div class="page-footer__address-wrapper">
+        <p class="page-footer__text">ПРИГЛАШАЕМ К СОТРУДНИЧЕСТВУ ДИЛЕРОВ!</p>
+        <p class="page-footer__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
       </div>
-      <p class="example__cost">ЗАТРАТЫ НА ПИТАНИЕ: 15 000 РУБ.</p>
-      <img class="example__cat" src="img/before-mobile@1x.png" width="150" height="100"
-        alt="Изображение упитанного кота">
-      <div class="example__wrapper">
-        <p class="example__text">Было</p>
-        <img class="example__scale" src="img/" width="150" height="100" alt="Scale">
-        <p class="example__text">Стало</p>
+      <img class="footer__map" src="img/bg-map-mobile@1x.png" alt="Карта">
+      <a href="" class="page-footer__logo">
+        <img class="page-footer__logo-img" src="img/logo-footer.svg" alt="Cat energy">
+      </a>
+      <hr class="page-footer__hr">
+      <div class="page-footer__wrapper social-media">
+        <a href="#" class="page-footer__vk social-media__item">
+          <img class="visually-hidden page-footer__vk-img" src="img/icon-vk.svg" alt="Вконтакте">
+        </a>
+        <a href="#" class="page-footer__instagram social-media__item">
+          <img class="visually-hidden page-footer__insta-img" src="img/icon-insta.svg" alt="Instagram">
+        </a>
+        <a href="#" class="page-footer__vk social-media__item">
+          <img class="visually-hidden page-footer__fb-img" src="img/icon-fb.svg" alt="Facebook">
+        </a>
       </div>
-    </section>
-  </main>
-
-  <footer class="page-footer">
-    <div class="page-footer__address-wrapper">
-      <p class="page-footer__text">ПРИГЛАШАЕМ К СОТРУДНИЧЕСТВУ ДИЛЕРОВ!</p>
-      <p class="page-footer__address">ПРИГЛАШАЕМ К СОТРУДНИЧЕСТВУ ДИЛЕРОВ!</p>
-    </div>
-    <img class="footer__map" src="img/bg-map-mobile@1x.png" width="150" height="100" alt="Карта">
-    <a href="" class="page-footer__logo">
-      <img class="page-footer__logo-img" src="img/logo-footer.svg" width="550" height="200" alt="Cat energy">
-    </a>
-    <div class="page-footer__wrapper social-media">
-      <a href="#" class="page-footer__vk social-media__item">
-        <img class="visually-hidden" src="img/icon-vk.svg"
-          width="150" height="100" alt="Вконтакте" >
-      </a>
-      <a href="#" class="page-footer__instagram social-media__item">
-        <img class="visually-hidden" src="img/icon-insta.svg"
-          width="150" height="100" alt="Instagram">
-      </a>
-      <a href="#" class="page-footer__vk social-media__item">
-        <img class="visually-hidden" src="img/icon-fb.svg"
-          width="150" height="100" alt="Facebook">
-      </a>
-    </div>
-    <div class="page-footer__copyright copyright">
-      <span class="page-footer__copyright-name">HTML Academy</span>
-      <a class="page-footer__copyright-link" href="https://htmlacademy.ru/intensive/adaptive">
-        <img class="page-footer__copyright-img" src="img/htmlacademy.svg"
-          width="150" height="100" alt="Copyright"></a>
-    </div>
-  </footer>
+      <hr class="page-footer__hr">
+      <div class="page-footer__copyright copyright">
+        <span class="page-footer__copyright-name">HTML Academy</span>
+        <a class="page-footer__copyright-link" href="https://htmlacademy.ru/intensive/adaptive">
+          <img class="page-footer__copyright-img" src="img/htmlacademy.svg" alt="Copyright"></a>
+      </div>
+    </footer>
   </div>
 </body>
+
 </html>
